--- a/synamedia_code_gen/package.json
+++ b/synamedia_code_gen/package.json
@@ -15,5 +15,10 @@
     "express": "^4.18.2",
     "openai": "^3.3.0",
     "textract": "^2.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
