--- a/synamedia_code_gen/package.json
+++ b/synamedia_code_gen/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "crawler": "^1.4.0",
     "openai": "^3.3.0",
     "textract": "^2.5.0"
   },
